# PocketCFO

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.prod.yml  docker-compose.yml  esun_trade-2.2.0-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: Dockerfile.frontend  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AIChatbox.tsx  ToastContainer.tsx
frontend/src/pages/: AccountsPage.tsx  BalanceSheetPage.tsx  DashboardPage.tsx  IncomeStatementPage.tsx  (+10 more)
scratch/: clear_esun_may.py  migrate_to_postgres.py  test_traceback.py
scripts/: backfill_fx_balances.py  reclassify_categories.py  recompute_all_balance_sheets.py  recompute_all_income_statements.py  rename_accounts.py  sync_now.py  test_rebalance.py
src/controllers/: account.py  ai_assistant.py  auth.py  category_rules.py  savings_pots.py  settings.py  transactions.py  upload.py
src/dbs/: models.py  repository.py
src/instances/: config.py  database.py  gemini.py
src/middleware/: auth.py  error_middleware.py  logging_middleware.py
src/services/: email_service.py  exchange_rate.py  scheduler.py  statement.py
src/templates/: financial_report.html  report_style.css
src/utils/: category_classifier.py  check_snapshots.py  date_utils.py  stock_utils.py  transfer_detector.py  update_categories.py
tests/unit/: test_ai_assistant.py
(+47 files in other folders)
